<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mandarin"
            android:icon="@drawable/presence_online"
            android:title="@string/accent_mandarin" />
        <item
            android:id="@+id/nav_cantonese"
            android:icon="@drawable/presence_online"
            android:title="@string/accent_cantonese" />
        <item
            android:id="@+id/nav_english"
            android:icon="@drawable/presence_online"
            android:title="@string/accent_english" />
        <item
            android:id="@+id/nav_sichuan"
            android:icon="@drawable/presence_online"
            android:title="@string/accent_sichuan" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_rate" />
        </menu>
    </item>

</menu>
